# strategic-inference-engine

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: main.py  models.py  strategy.py
